--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
   @font-face {
       font-family: "covesBold";
-      src: url("./covesBold.otf");
+      src: url("./fonts/covesBold.otf");
   }
 
   body {
