--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
       font-family: "ailerons";
-      src: url("./Ailerons.otf");
+      src: url("./css/Ailerons.otf");
   }
 
   @font-face {
