--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @font-face {
-      font-family: "ailerons";
+      font-family: "Ailerons";
       src: url("./css/Ailerons.otf");
   }
 
@@ -53,7 +53,7 @@
     .titleDiv {
       padding: 100px 0px 40px 0px;
       color: white;
-      font-family: 'ailerons';
+      font-family: 'Ailerons';
       text-align: center;
       background: url("./mountains.jpg");
       background-size: cover;
