--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
-      font-family: "Ailerons";
-      src: url("Ailerons.otf");
+      font-family: "ailerons";
+      src: url("ailerons.otf");
   }
 
   @font-face {
