--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
-      font-family: "ailerons";
-      src: url("ailerons.otf");
+      font-family: "Ailerons";
+      src: url("Ailerons.otf");
   }
 
   @font-face {
@@ -21,7 +21,7 @@
         background-color: #333;
         position: fixed;
         width: 100%;
-        font-family: 'ailerons';
+        font-family: 'Ailerons';
         text-align: center;
     }
 
